# ForensicsToolkit

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  Future.md  LICENSE  README.md  vcpkg.json
cmake/: ForensicToolkitConfig.cmake
docs/: CNAME  index.html  install.html  script.js  style.css
docs/api/: API.md  ARCHITECTURE.md
docs/screenshots/: README.md
include/core/: ForensicCase.h  HashEngine.h  Logger.h  PluginInterface.h  ThreadPool.h
include/modules/: AiAssistant.h  EventLogParser.h  FileIntegrityModule.h  FileSystemAnalyzer.h  MalwareDetector.h  MemoryAnalyzer.h  NetworkForensics.h  ReportGenerator.h
include/repositories/: CaseRepository.h
include/services/: CaseService.h
include/ui/: AddEvidenceDialog.h  AddInvestigatorDialog.h  AiAssistantView.h  CaseManagerView.h  DashboardView.h  EventLogView.h  FileIntegrityView.h  FileSystemView.h  LogView.h  MainWindow.h  MalwareView.h  MemoryAnalysisView.h  NetworkForensicsView.h  NewCaseDialog.h  ReportView.h  SettingsDialog.h
include/utils/: ForensicUtils.h
installer/: ForensicToolkit.iss
resources/: resources.qrc
resources/icons/: app_placeholder.txt
resources/styles/: dark.qss
resources/templates/: report_template.html
resources/yara_rules/: default.yar
scripts/: build_linux.sh  build_windows.bat  deploy_windows.bat  init_git.bat
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  ForensicCase.cpp  HashEngine.cpp  Logger.cpp  ThreadPool.cpp
src/modules/: CMakeLists.txt
src/modules/ai_assistant/: AiAssistant.cpp
src/modules/case_management/: CaseManagement.cpp
src/modules/event_log_parser/: EventLogParser.cpp
src/modules/file_integrity/: FileIntegrityModule.cpp
src/modules/filesystem_analyzer/: FileSystemAnalyzer.cpp
src/modules/malware_detection/: MalwareDetector.cpp
src/modules/memory_analysis/: MemoryAnalyzer.cpp
src/modules/network_forensics/: NetworkForensics.cpp
src/modules/report_generator/: ReportGenerator.cpp
src/plugins/: CMakeLists.txt  HashAnalyzerPlugin.cpp
src/repositories/: CMakeLists.txt  CaseRepository.cpp
src/services/: CMakeLists.txt  CaseService.cpp
src/ui/: CMakeLists.txt
src/ui/dialogs/: AddEvidenceDialog.cpp  AddInvestigatorDialog.cpp  NewCaseDialog.cpp  SettingsDialog.cpp
src/ui/models/: ForensicTableModel.h
src/ui/views/: AiAssistantView.cpp  CaseManagerView.cpp  DashboardView.cpp  EventLogView.cpp  FileIntegrityView.cpp  FileSystemView.cpp  LogView.cpp  MainWindow.cpp  MalwareView.cpp  MemoryAnalysisView.cpp  NetworkForensicsView.cpp  ReportView.cpp
src/ui/widgets/: ScanProgressWidget.cpp  StatusCard.cpp
src/utils/: CMakeLists.txt  ForensicUtils.cpp
tests/integration/: CMakeLists.txt  test_integration_case.cpp
tests/unit/: CMakeLists.txt  test_case_service.cpp  test_filesystem.cpp  test_hash.cpp  test_integrity.cpp  test_malware.cpp  test_utils.cpp
